removed some obsolete dsl properties

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -63,25 +63,6 @@ _UI_BoolVar_type = Var Bool
 _UI_FilePathVar_type = Var Datei-Pfad
 _UI_ListVar_type = Var Liste
 _UI_ListVarItem_type = Var Listen-Eintrag
-_UI_TransformObject_type = Transform Objekt
-_UI_EntityEventListener_type = Entity Event Listener
-_UI_ArithmeticOperation_type = Arithmetische Operation
-_UI_SystemCall_type = System-Aufruf
-_UI_DateTimeOperation_type = Datum Zeit Operation
-_UI_FinancialOperation_type = Finanzielle Operation
-_UI_LogicOperation_type = Logische Operation
-_UI_StringOperation_type = String-Operation
-_UI_ReplaceOperation_type = Ersetzungs-Operation
-_UI_PreProcess_type = Pre Process
-_UI_PostProcess_type = Post Process
-_UI_PrePersist_type = Pre Persist
-_UI_PostPersist_type = Post Persist
-_UI_PreUpdate_type = Pre Update
-_UI_PostUpdate_type = Post Update
-_UI_PreRemove_type = Pre Remove
-_UI_PostRemove_type = Post Remove
-_UI_PostLoad_type = Post Load
-_UI_ReplaceGermanSpecialChars_type = Ersetzung deutscher Sonderzeichen
 _UI_ControllerObject_type = Controller Objekt
 _UI_Transition_type = Übergang
 _UI_Action_type = Action
@@ -108,37 +89,7 @@ _UI_EndEvent_type = End-Ereignis
 _UI_Redirect_type = Redirect
 _UI_UserTransition_type = User Transition
 _UI_ViewObject_type = View Objekt
-_UI_View_type = View
-_UI_InputField_type = Eingabe-Feld
-_UI_Container_type = Container
-_UI_Form_type = Formular
-_UI_PresentationTable_type = Präsentations-Tabelle
-_UI_Panel_type = Panel
-_UI_TabbedPane_type = Tabbed Pane
-_UI_RootPanel_type = Root Panel
-_UI_SubContainer_type = Unter-Container
-_UI_SearchPanel_type = Such Panel
-_UI_DisplayField_type = Display-Feld
 _UI_Field_type = Feld
-_UI_DesignField_type = Design-Feld
-_UI_Button_type = Button
-_UI_Link_type = Link
-_UI_Activator_type = Aktivator
-_UI_SubmitButton_type = Submit Button
-_UI_CancelButton_type = Cancel Button
-_UI_SubmitActivator_type = Submit Aktivator
-_UI_CancelActivator_type = Cancel Aktivator
-_UI_BackLink_type = Back Link
-_UI_SubmitLink_type = Submit Link
-_UI_CompositeContainer_type = Composite Container
-_UI_LayoutTable_type = Layout-Tabelle
-_UI_DataTable_type = Daten-Tabelle
-_UI_LayoutOrder_type = Layout Order
-_UI_FormLabel_type = Form Label
-_UI_ListView_type = List View
-_UI_DetailView_type = Detail View
-_UI_EditView_type = Edit View
-_UI_CustomView_type = Eigene View
 _UI_Unknown_type = Object
 
 _UI_Unknown_datatype= Value
@@ -267,12 +218,8 @@ _UI_Controllers_transitions_feature = Übergänge
 _UI_Controllers_transitions_description = Liste der Übergänge zwischen Controller-Aktionen.
 _UI_Controllers_handlers_feature = Handler
 _UI_Controllers_handlers_description = Liste der Aktions-Handler für Controller-Aktionen.
-_UI_Views_views_feature = Views
-_UI_Views_views_description = Liste der Views in dieser Views-Schicht.
 _UI_Views_application_feature = Anwendung
 _UI_Views_application_description = Referenz zur enthaltenden Anwendung.
-_UI_Views_layoutOrders_feature = Layout-Reihenfolgen
-_UI_Views_layoutOrders_description = Liste der Relationen zur Platzierung verschiedener Panels nebeneinander.
 _UI_Views_controller_feature = Controller
 _UI_Views_controller_description = Liste der Controller, die diese View-Schicht behandeln.
 _UI_Entity_nameMultiple_feature = Name Mehrzahl
@@ -649,68 +596,18 @@ _UI_ActionHandler_container_feature = Container
 _UI_ActionHandler_container_description = Übergeordnete Controller-Schicht.
 _UI_ActionEvent_handler_feature = Handler
 _UI_ActionEvent_handler_description = Übergeordneter Aktions-Handler für dieses Ereignis.
-_UI_View_viewRoot_feature = View-Root
-_UI_View_viewRoot_description = Referenz zum Root-Panel dieser View.
-_UI_View_viewContainer_feature = View-Container
-_UI_View_viewContainer_description = Übergeordneter View-Container.
-_UI_InputField_id_feature = Id
-_UI_InputField_id_description = Id für dieses Eingabefeld.
-_UI_InputField_isVisible_feature = Ist sichtbar
-_UI_InputField_isVisible_description = Ob dieses Feld sichtbar sein soll oder nicht.
-_UI_InputField_isReadOnly_feature = Ist Read Only
-_UI_InputField_isReadOnly_description = Ob dieses Feld nur lesbar sein soll oder nicht.
-_UI_InputField_isMandatory_feature = Ist Pflicht
-_UI_InputField_isMandatory_description = Ob dieses Feld Pflicht ist oder nicht.
-_UI_InputField_hasInitialFocus_feature = Hat initialen Fokus
-_UI_InputField_hasInitialFocus_description = Ob dieses Fokus den initialen Fokus besitzt oder nicht.
-_UI_Container_submitActivators_feature = Absende-Aktivatoren
-_UI_Container_submitActivators_description = Liste der Absende-Aktivatoren (wie SubmitButton und SubmitLink).
-_UI_Container_cancelActivators_feature = Abbruch-Aktivatoren
-_UI_Container_cancelActivators_description = Liste der Abbruch-Aktivatoren (wie CancelButton und BackLink).
-_UI_RootPanel_presenter_feature = Präsentierer
-_UI_RootPanel_presenter_description = Übergeordnetes View-Objekt, das mit dem Controller kommuniziert.
-_UI_RootPanel_containers_feature = Container
-_UI_RootPanel_containers_description = Liste der Untercontainer mit Panels und anderen UI-Elementen.
-_UI_SubContainer_fields_feature = Felder
-_UI_SubContainer_fields_description = Liste von in diesem Untercontainer enthaltenen Feldern.
-_UI_SubContainer_parentContainer_feature = Parent-Container
-_UI_SubContainer_parentContainer_description = Der übergeordnete Composite-Container.
-_UI_SearchPanel_searchButton_feature = Such-Button
-_UI_SearchPanel_searchButton_description = Referenz zum Absende-Button zum Starten der Suche.
 _UI_Field_class_feature = CSS-Klasse
 _UI_Field_cssClass_description = Name einer oder mehrerer CSS-Klassen
 _UI_Field_defaultValue_feature = Standardwert
 _UI_Field_defaultValue_description = Bei der Anzeige dieses Feldes verwendeter Standardwert.
 _UI_Field_fieldContainer_feature = Feld-Container
 _UI_Field_fieldContainer_description = Der übergeordnete Untercontainer für dieses Feld.
-_UI_DesignField_tagName_feature = Tag Name
-_UI_DesignField_tagName_description = Markup Tag Name für dieses Feld (zum Beispiel p, h2 oder address).
-_UI_Button_label_feature = Label
-_UI_Button_label_description = Der Wert, der als Label auf dem Button angezeigt werden soll.
-_UI_SubmitButton_searchContext_feature = Such-Kontext
-_UI_SubmitButton_searchContext_description = Das für die Suche benutzte Panel.
-_UI_SubmitActivator_submitContext_feature = Submit-Kontext
-_UI_SubmitActivator_submitContext_description = Der für die Formularaktion verwendete Container.
-_UI_CancelActivator_cancelContext_feature = Cancel-Kontext
-_UI_CancelActivator_cancelContext_description = Der für die Formularaktion verwendete Container.
-_UI_CompositeContainer_childContainer_feature = Kind-Container
-_UI_CompositeContainer_childContainer_description = Liste von Kindcontainern.
-_UI_CompositeContainer_rootPanel_feature = Root-Panel
-_UI_CompositeContainer_rootPanel_description = Das Root-Panel, das diesen Composite-Container enthält.
-_UI_LayoutOrder_length_feature = Länge
-_UI_LayoutOrder_length_description = Die Länge dieser Layout-Anordnung (z.B. 30% oder 400px).
-_UI_LayoutOrder_type_feature = Art
-_UI_LayoutOrder_type_description = Die Art der verwendeten Positionierung (float left, float right, eines unter dem anderen).
-_UI_LayoutOrder_lengthType_feature = Längen-Art
-_UI_LayoutOrder_lengthType_description = Die Art der spezifizierten Länge (zum Beispiel px, em oder %).
-_UI_LayoutOrder_source_feature = Quelle
-_UI_LayoutOrder_source_description = Referenz zum Quell-Container (z.B. linker oder oberer Block).
-_UI_LayoutOrder_target_feature = Ziel
-_UI_LayoutOrder_target_description = Referenz zum Ziel-Container (z.B. rechter oder unterer Block).
-_UI_LayoutOrder_layoutContext_feature = Layout-Kontext
-_UI_LayoutOrder_layoutContext_description = Übergeordneter View-Schicht Container.
-_UI_FormLabel_for_feature = Für
-_UI_FormLabel_for_description = Referenz zu dem Eingabefeld, das dieses Label beschreibt.
+_UI_Field_isVisible_feature = Sichtbar
+_UI_Field_isVisible_description = Ob dieses Feld sichtbar sein soll oder nicht.
+_UI_Field_isReadOnly_feature = Nur lesen
+_UI_Field_isReadOnly_description = Ob dieses Feld nur lesbar sein soll oder nicht.
+_UI_Field_hasInitialFocus_feature = Hat initialen Fokus
+_UI_Field_hasInitialFocus_description = Ob dieses Fokus den initialen Fokus besitzt oder nicht.
 _UI_Unknown_feature = Unspezifiziert
 
 _UI_ApplicationType_WEB_literal = WEB
@@ -819,25 +716,6 @@ _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_EDIT_literal = ACTIVE_EDIT_PASSIVE_EDIT
 _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_NONE_literal = ACTIVE_EDIT_PASSIVE_NONE
 _UI_InheritanceStrategyType_SINGLE_TABLE_literal = SINGLE_TABLE
 _UI_InheritanceStrategyType_JOINED_literal = JOINED
-_UI_CancelButtonType_CANCEL_literal = CANCEL
-_UI_CancelButtonType_NO_literal = NO
-_UI_CancelButtonType_PREVIOUS_literal = PREVIOUS
-_UI_SubmitButtonType_OK_literal = OK
-_UI_SubmitButtonType_YES_literal = YES
-_UI_SubmitButtonType_CONTINUE_literal = CONTINUE
-_UI_SubmitButtonType_NEXT_literal = NEXT
-_UI_LayoutOrderType_HORIZ_LEFT_literal = HORIZ_LEFT
-_UI_LayoutOrderType_HORIZ_RIGHT_literal = HORIZ_RIGHT
-_UI_LayoutOrderType_VERTICAL_literal = VERTICAL
-_UI_LayoutOrderLengthType_PIXELS_literal = PIXELS
-_UI_LayoutOrderLengthType_PERCENT_literal = PERCENT
-_UI_LayoutOrderLengthType_EM_literal = EM
-_UI_LayoutOrderLengthType_EX_literal = EX
-_UI_LayoutOrderLengthType_CENTIMETER_literal = CENTIMETER
-_UI_LayoutOrderLengthType_MILLIMETER_literal = MILLIMETER
-_UI_LayoutOrderLengthType_INCH_literal = INCH
-_UI_LayoutOrderLengthType_POINTS_literal = POINTS
-_UI_LayoutOrderLengthType_PICAS_literal = PICAS
 
 _UI_GeneralPropertyCategory = Allgemein
 _UI_FeaturesPropertyCategory = Features
