added field properties for edit visibility and arbitrary css classes

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -290,6 +290,10 @@ _UI_DerivedField_unique_feature = Eindeutig
 _UI_DerivedField_unique_description = Ob dieses Feld eindeutig ist oder nicht.
 _UI_DerivedField_nullable_feature = Null
 _UI_DerivedField_nullable_description = Ob Null-Werte erlaubt sein sollen oder nicht.
+_UI_DerivedField_visible_feature = Sichtbar
+_UI_DerivedField_visible_description = Ob dieses Feld sichtbar sein soll oder nicht.
+_UI_DerivedField_cssClass_feature = CSS-Klasse
+_UI_DerivedField_cssClass_description = Name einer oder mehrerer CSS-Klassen
 _UI_DerivedField_translatable_feature = Übersetzbar
 _UI_DerivedField_translatable_description = Ob Werte dieses Feldes übersetzbar sein sollen oder nicht.
 _UI_DerivedField_sortableGroup_feature = Sortable-Gruppe
@@ -548,18 +552,6 @@ _UI_Controller_actions_feature = Aktionen
 _UI_Controller_actions_description = Liste der in diesem Controller enthaltenen Aktionen.
 _UI_Controller_container_feature = Container
 _UI_Controller_container_description = Referenz zur übergeordneten Controller-Schicht.
-_UI_Field_class_feature = CSS-Klasse
-_UI_Field_cssClass_description = Name einer oder mehrerer CSS-Klassen
-_UI_Field_defaultValue_feature = Standardwert
-_UI_Field_defaultValue_description = Bei der Anzeige dieses Feldes verwendeter Standardwert.
-_UI_Field_fieldContainer_feature = Feld-Container
-_UI_Field_fieldContainer_description = Der übergeordnete Untercontainer für dieses Feld.
-_UI_Field_isVisible_feature = Sichtbar
-_UI_Field_isVisible_description = Ob dieses Feld sichtbar sein soll oder nicht.
-_UI_Field_isReadOnly_feature = Nur lesen
-_UI_Field_isReadOnly_description = Ob dieses Feld nur lesbar sein soll oder nicht.
-_UI_Field_hasInitialFocus_feature = Hat initialen Fokus
-_UI_Field_hasInitialFocus_description = Ob dieses Fokus den initialen Fokus besitzt oder nicht.
 _UI_Unknown_feature = Unspezifiziert
 
 _UI_ApplicationType_WEB_literal = WEB
