removed controller container, merged remaining controller elements into main layer

--- a/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -52,20 +52,34 @@ ModelElementSelectionPageMessage=Wähle Modell-Element:
 ValidateActionMessage=Validieren
 Container1Group_title=Container
 Container1Group_desc=Container-Elemente für Untereditoren
-Links2Group_title=Links
-Links2Group_desc=Abhängigkeits-Elemente
+Controllers2Group_title=Controller
+Controllers2Group_desc=Controller-Elemente
+Actions3Group_title=Aktionen
+Actions3Group_desc=Aktions-Elements
 Model1CreationTool_title=Model
 Model1CreationTool_desc=Neuen Container zur Datenspeicherung erstellen
-Controller2CreationTool_title=Controller
-Controller2CreationTool_desc=Neuen Container für Pageflow-Controller erstellen
-View3CreationTool_title=View
-View3CreationTool_desc=Neuen Container für Präsentations-Elemente erstellen
-Settings4CreationTool_title=Einstellungen
-Settings4CreationTool_desc=Neuen Container für Generator-Einstellungen erstellen
-ModelDependency1CreationTool_title=Model-Abhängigkeit
-ModelDependency1CreationTool_desc=Model an Controller zuweisen
-ViewDependency2CreationTool_title=View-Abhängigkeit
-ViewDependency2CreationTool_desc=View an Controller zuweisen
+Settings2CreationTool_title=Einstellungen
+Settings2CreationTool_desc=Neuen Container für Generator-Einstellungen erstellen
+Admin3CreationTool_title=Admin
+Admin3CreationTool_desc=Neuen Controller mit Admin-Rolle erstellen
+User4CreationTool_title=User
+User4CreationTool_desc=Neuen Controller mit Benutzer-Rolle erstellen
+Ajax5CreationTool_title=Ajax
+Ajax5CreationTool_desc=Neuen Ajax Controller erstellen
+Customcontroller6CreationTool_title=Individuell
+Customcontroller6CreationTool_desc=Neuen individuellen Controller erstellen
+Main1CreationTool_title=Main
+Main1CreationTool_desc=Neue Main Aktion erstellen
+View2CreationTool_title=View
+View2CreationTool_desc=Neue View Aktion erstellen
+Display3CreationTool_title=Display
+Display3CreationTool_desc=Neue Display Aktion erstellen
+Edit4CreationTool_title=Edit
+Edit4CreationTool_desc=Neue Edit Aktion erstellen
+Delete5CreationTool_title=Delete
+Delete5CreationTool_desc=Neue Delete Aktion erstellen
+Customaction6CreationTool_title=Individuelle Aktion
+Customaction6CreationTool_desc=Neue individuelle Aktion erstellen
 DiagramEditorActionBarAdvisor_DefaultFileEditorTitle=Fehler
 DiagramEditorActionBarAdvisor_DefaultFileEditorMessage=Es ist kein Editor registriert für die Datei "{0}"
 DiagramEditorActionBarAdvisor_DefaultEditorOpenErrorTitle=Offener Editor
