--- a/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -47,6 +47,14 @@ prefpage.de.guite.modulestudio.gmf.main.rulersAndGrid=Lineale und Grid
 # Providers
 metatype.name.Application_1000=Anwendung
 metatype.name.Models_2001=Model
-metatype.name.Controllers_2002=Controller
-metatype.name.SettingsContainer_2003=Einstellungen
-metatype.name.ControllersModelContext_4001=Model Abhängigkeit
+metatype.name.SettingsContainer_2002=Einstellungen
+metatype.name.AdminController_2201=Admin Controller
+metatype.name.UserController_2202=User Controller
+metatype.name.AjaxController_2203=Ajax Controller
+metatype.name.CustomController_2204=Eigener Controller
+metatype.name.MainAction_3201=Main Aktion
+metatype.name.ViewAction_3202=View Aktion
+metatype.name.DisplayAction_3203=Display Aktion
+metatype.name.EditAction_3204=Edit Aktion
+metatype.name.DeleteAction_3205=Delete Aktion
+metatype.name.CustomAction_3206=Eigene Aktion
