--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -18,7 +18,6 @@ _UI_Application_type = Anwendung
 _UI_SettingsContainer_type = Einstellungen
 _UI_ReferredApplication_type = Referenzierte Anwendung
 _UI_Models_type = Models
-_UI_Controllers_type = Controller
 _UI_Entity_type = Entität
 _UI_EntityField_type = Entitäts-Field
 _UI_DerivedField_type = Abgeleitetes Field
@@ -101,7 +100,7 @@ _UI_Application_interactiveInstallation_description = Ob ein normaler oder ein i
 _UI_Application_models_feature = Models
 _UI_Application_models_description = Model-Schichten dieser Anwendung.
 _UI_Application_controllers_feature = Controller
-_UI_Application_controllers_description = Controller-Schichten dieser Anwendung.
+_UI_Application_controllers_description = Controller dieser Anwendung.
 _UI_Application_generatorSettings_feature = Generator Einstellungen
 _UI_Application_generatorSettings_description = Technische Generator-Einstellungen.
 _UI_Application_referredApplications_feature = Referenzierte Anwendungen
@@ -186,10 +185,6 @@ _UI_Models_entities_feature = Entitäten
 _UI_Models_entities_description = Liste von Entitäten, die die Datenbanktabellen repräsentieren.
 _UI_Models_numExampleRows_feature = Anzahl Beispiel-Sätze
 _UI_Models_numExampleRows_description = Die Anzahl der während der Installation zu erstellenden Beispieldaten.
-_UI_Controllers_application_feature = Application
-_UI_Controllers_application_description = Referenz zur enthaltenden Anwendung.
-_UI_Controllers_controllers_feature = Controller
-_UI_Controllers_controllers_description = Liste der in dieser Controller-Schicht enthaltenen Controller.
 _UI_Entity_nameMultiple_feature = Name Mehrzahl
 _UI_Entity_nameMultiple_description = Pluralform des Entitätsnamens.
 _UI_Entity_displayPattern_feature = Anzeigemuster
@@ -534,8 +529,8 @@ _UI_Action_controller_feature = Controller
 _UI_Action_controller_description = Übergeordneter Controller dieser Aktion.
 _UI_Controller_actions_feature = Aktionen
 _UI_Controller_actions_description = Liste der in diesem Controller enthaltenen Aktionen.
-_UI_Controller_container_feature = Container
-_UI_Controller_container_description = Referenz zur übergeordneten Controller-Schicht.
+_UI_Controller_application_feature = Application
+_UI_Controller_application_description = Referenz zur enthaltenden Anwendung.
 _UI_Unknown_feature = Unspezifiziert
 
 _UI_ApplicationType_WEB_literal = WEB
@@ -653,4 +648,5 @@ _UI_ContainedelementsPropertyCategory = Enthaltene Elemente
 _UI_BasicdataPropertyCategory = Basis-Daten
 _UI_FurtheroptionsPropertyCategory = Weitere Optionen
 _UI_SizePropertyCategory = Größe
+_UI_WorkflowPropertyCategory = Workflow
 _UI_ContainerPropertyCategory = Container
