--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -20,8 +20,9 @@ MostDslValidator.ApplicationImportNeedsName=Du musst den Namen der importierten 
 MostDslValidator.ApplicationImportNeedsUri=Du musst die URI der Modelldatei der importierten Anwendung eingeben.
 MostDslValidator.ApplicationNameMustBeLonger=Der Name der Anwendung muss eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.ApplicationNameMustStartWithCapital=Der Name der Anwendung muss mit einem Großbuchstaben beginnen, bitte benenne sie um in 
+MostDslValidator.ApplicationNeedsAdminController=Du musst einen Admin-Controller haben, für die Hook-Subscriber-Funktionalität.
 MostDslValidator.ApplicationNeedsAuthor=Die Anwendung muss einen Autor haben.
-MostDslValidator.ApplicationNeedsControllerContainer=Die Anwendung muss mindestens einen Controller-Container enthalten.
+MostDslValidator.ApplicationNeedsController=Die Anwendung muss mindestens einen Controller enthalten.
 MostDslValidator.ApplicationNeedsEmailAddress=Die Anwendung muss eine E-Mail-Adresse haben.
 MostDslValidator.ApplicationNeedsModelContainer=Die Anwendung muss mindestens einen Model-Container enthalten.
 MostDslValidator.ApplicationNeedsName=Die Anwendung muss einen Namen haben.
@@ -38,14 +39,8 @@ MostDslValidator.ApplicationVersionIsInvalid=Die Version der Anwendung muss dem 
 MostDslValidator.CalculatedFieldNeedsOperand=Das Feld muss sich auf mindestens ein abgeleitetes Feld beziehen.
 MostDslValidator.ControllerActionsMustBeUnique=Die Namen von eigenen Aktionen in einem Controller müssen eindeutig sein.
 MostDslValidator.ControllerAjaxMustNotHaveDeleteAction=Dieser Controller darf keine Delete-Aktion enthalten. Bitte entferne sie.
-MostDslValidator.ControllerContainerNameMustBeLonger=Der Name des Controller-Containers muss eine Länge von mindestens drei Zeichen haben.
-MostDslValidator.ControllerContainerNameShouldBeLonger=Der Name des Controller-Containers sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.ControllerContainerNeedsAdminController=Du musst einen Admin-Controller haben, für die Hook-Subscriber-Funktionalität.
 MostDslValidator.ControllerContainerNeedsAjaxController=Bitte erstelle einen Ajax-Controller mit einer beliebigen Aktion, wie Main, da er zur einwandfreien Verarbeitung Deines Modells notwendig ist.
-MostDslValidator.ControllerContainerNeedsApplication=Der Controller-Container muss einer Anwendung zugewiesen werden.
 MostDslValidator.ControllerContainerNeedsController=Der Controller-Container muss mindestens einen Controller enthalten.
-MostDslValidator.ControllerContainerNeedsName=Der Controller-Container muss einen Namen haben.
-MostDslValidator.ControllerContainersMustBeUnique=Die Namen der Controller-Container müssen eindeutig sein.
 MostDslValidator.ControllerMustNotHaveMultipleDeleteActions=Es darf nicht mehr als eine Delete-Aktion in einem Controller geben.
 MostDslValidator.ControllerMustNotHaveMultipleDisplayActions=Es darf nicht mehr als eine Display-Aktion in einem Controller geben.
 MostDslValidator.ControllerMustNotHaveMultipleEditActions=Es darf nicht mehr als eine Edit-Aktion in einem Controller geben.
@@ -57,7 +52,7 @@ MostDslValidator.ControllerNameMustNotContainUnderscores=Der Name des Controller
 MostDslValidator.ControllerNameShouldBeLonger=Der Name des Controllers sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.ControllerNamesMustBeUnique=Die Namen der Controller müssen eindeutig sein.
 MostDslValidator.ControllerNeedsAction=Jeder Controller muss mindestens eine Aktion enthalten.
-MostDslValidator.ControllerNeedsContainer=Der Controller muss einem Controller-Container zugewiesen werden.
+MostDslValidator.ControllerNeedsApplication=Der Controller muss einer Anwendung zugewiesen werden.
 MostDslValidator.ControllerNeedsName=Der Controller muss einen Namen haben.
 MostDslValidator.CustomControllersMustBeUnique=Die Namen der eigenen Controller müssen eindeutig sein.
 MostDslValidator.DerivedFieldDbNameIsInvalidIdentifier=Der DB Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen): {0}.
